# learning_llm

./: README.md  pyproject.toml
.cursor/: rules
grpo/: README.md  reward.py  test_bf16.py  trainer.py
grpo_qwen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
learning_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
training_with_unsloth/: .cursorrules_wandb  CHANGES_APPLIED.md  CRITICAL_BUG_FIX.md  DETAILED_EVAL_LOGGING.md  GRPO_TRAINING_EXPLANATION.md  IMPROVEMENTS_SUMMARY.md  README.md
training_with_unsloth/experiment_configs/: eval_test.yaml  eval_test_improved.yaml  experiments_index.txt  qwen3_grpo_bs1_lr1e-5_ng4_ga4_seed42_rmk.yaml  qwen3_grpo_bs1_lr1e-6_ng4_ga4_seed42_rmk.yaml  smoke.yaml  sweep_cfg_z8o9euaa.yaml
training_with_unsloth/experiments/: generate_configs.py  run_all.py  run_eval_test.py  run_experiment.py  run_wandb_sweep.py  test_prompt.py
training_with_unsloth/framework/: config.py  dataset.py  grpo_trainer.py
training_with_unsloth/rewards/: reward_functions.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  GPTQLoraLinear_peft_forward.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+13 files in other folders)
