[project]
name = "grpo-qwen"
version = "0.1.0"
description = ""
authors = [
    {name = "Haozhe Zhang", email = "zhang.hz6666@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.52.4,<5.0.0",
    "datasets>=3.6.0,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "torch==2.6.0",
    "tensorboard==2.19.0",
    "seaborn>=0.13.2,<1.0.0",
    "scipy>=1.15.3,<2.0.0",
    "openai>=1.84.0,<2.0.0",
    "wandb>=0.20.1,<1.0.0",
    "accelerate>=1.8.1,<2.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "unsloth[colab-new]",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5,<7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grpo*", "unsloth*", "wandb*"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

